--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/gSchool/fs-pet-shop/issues"
   },
-  "homepage": "https://github.com/gSchool/fs-pet-shop#readme"
+  "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
+  }
 }
